--- a/.github/工作流.md
+++ b/.github/工作流.md
@@ -15,10 +15,11 @@
 - 使用 PyInstaller 打包 Python 应用
 - 自动上传构建产物作为 Artifacts
 - 缓存 pip 依赖以加速构建
+- 使用最新的 GitHub Actions（v4/v5）
 
 **构建产物：**
 - `PicExam-Windows` - Windows 可执行文件
-- `PicExam-Linux` - Linux 可执行文件  
+- `PicExam-Linux` - Linux 可执行文件
 - `PicExam-macOS` - macOS 可执行文件
 
 ### 2. `test.yml` - 测试和代码检查
@@ -31,6 +32,7 @@
 - 模块导入测试
 - 必需文件存在性检查
 - JSON 配置文件格式验证
+- 使用最新的 GitHub Actions
 
 ### 3. `release.yml` - 自动发布
 **触发条件：**
@@ -39,7 +41,8 @@
 **功能：**
 - 自动创建 GitHub Release
 - 构建所有平台的可执行文件
-- 打包成 ZIP 文件并上传到 Release
+- 打包成 ZIP 文件并自动上传到 Release
+- 使用现代化的 `softprops/action-gh-release@v2`
 
 ## 使用方法
 
@@ -73,6 +76,14 @@
 - `remove_approval_tags.py` - 标签移除模块
 - `filter_config.json` - 过滤配置文件
 - `requirements.txt` - Python 依赖
+
+### GitHub Actions 版本
+- `actions/checkout@v4`
+- `actions/setup-python@v5`
+- `actions/cache@v4`
+- `actions/upload-artifact@v4`
+- `actions/download-artifact@v4`
+- `softprops/action-gh-release@v2`
 
 ## 故障排除
 
