--- a/.github/工作流.md
+++ b/.github/工作流.md
@@ -93,10 +93,25 @@
 3. 验证 JSON 配置文件格式
 4. 检查依赖包是否正确安装
 
+### 文件复制错误 ✅ 已修复
+- **问题**：Windows版本报错 "The system cannot find the file specified"
+- **原因**：可选文件（如 `config.json`）不存在导致 copy 命令失败
+- **解决方案**：已使用 `if exist` 检查文件存在性，可选文件不存在时会跳过而不报错
+- **状态**：✅ 已在 v2024.1 版本中修复
+
 ### 发布失败
 1. 确认标签格式正确（以 `v` 开头）
 2. 检查 GitHub Token 权限
 3. 确认构建步骤成功完成
+
+### 文件权限问题
+- Linux/macOS 版本会自动设置可执行权限
+- Windows 版本无需额外权限设置
+
+### Actions 版本警告 ✅ 已修复
+- **问题**：使用了已弃用的 GitHub Actions 版本
+- **解决方案**：已更新到最新版本
+- **状态**：✅ 已在 v2024.1 版本中修复
 
 ## 自定义配置
 
